--- a/src/main/resources/templates/admin.html
+++ b/src/main/resources/templates/admin.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Main Page with Sidebar</title>
+    <title>관리자 페이지</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet">
     <style>
         body {
@@ -299,6 +299,21 @@
         } else {
             sidebar.style.left = '0px'; // 사이드바 보이기
             toggleBtn.classList.add('toggle-active');
+        }
+    });
+
+    // 로그아웃 시 세션에서 adminEmail 제거
+    document.addEventListener('DOMContentLoaded', function() {
+        // Get the logout link element
+        const logoutLink = document.querySelector('a[href="/admin/logout"]');
+
+        // Add a click event listener to the logout link
+        if (logoutLink) {
+            logoutLink.addEventListener('click', function() {
+                // Remove only 'adminEmail' from sessionStorage
+                sessionStorage.removeItem('adminEmail');
+                console.log("adminEmail removed from session storage on logout.");
+            });
         }
     });
 
